<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".Activities.ReadActivity"
    tools:ignore="MergeRootFrame">


    <TextView
        android:id="@+id/breve_desc2"
        android:layout_width="107dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="406dp"
        android:ems="10"
        android:text="Breve descrizione"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/horizontal"
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:scaleType="centerCrop"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take">

    </ImageView>

    <TextView
        android:id="@+id/nome"
        android:layout_width="107dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="338dp"
        android:ems="10"
        android:text="Nome"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/NomeText"
        android:layout_width="219dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="14dp"
        android:layout_toEndOf="@+id/nome"
        android:ems="10"
        android:hint="Name"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/didascalia"
        android:layout_width="107dp"
        android:layout_height="39dp"
        android:layout_below="@+id/breve_desc2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="Didascalia"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="221dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="14dp"
        android:layout_toEndOf="@+id/breve_desc2">

        <TextView
            android:id="@+id/b_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:text="Preview"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </ScrollView>

    <ScrollView
        android:id="@+id/DidascaliaVew"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="14dp">

        <TextView
            android:id="@+id/Didascalia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:text="Didascalia"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </ScrollView>

    <ImageButton
        android:id="@+id/gps"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="673dp"
        android:background="@drawable/ic_location"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loc"
        android:layout_width="195dp"
        android:layout_height="52dp"
        android:layout_alignBottom="@+id/gps"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="-8dp"
        android:layout_toEndOf="@+id/gps"
        android:hint="Location"
        android:text="Location"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>
