<resources>
    <string name="app_name">PlacesOfInterest</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (min 6 char)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <!-- Strings related to list -->
    <string name="title_item_detail">Item Detail</string>
    <!-- Strings related to activity main -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Public</string>
    <string name="tab_text_2">Private</string>
    <string name="dialog_fire_missiles">Seleziona la foto </string>
    <string name="camera">Fotocamera</string>
    <string name="galleria">Galleria</string>
    <string name="dialog_title">Scegli foto</string>
    <string name="UtenteGiaregistrato">Utente già registrato</string>
    <string name="UtenteNonregistrato">Utente non registrato</string>
    <string name="FotoNonAggiunta">Foto non aggiunta</string>
    <string name="selezionaFoto">Scegli foto da :</string>
    <string name="NuovoPost">  Nuovo post</string>
    <string name="Ok">OK</string>

</resources>
